--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="row align-items-center h-100">
       <div class="col-md-8 mx-auto">
         <div class="logo text-center">
-          <a href="/">
+          <a href="#">
             <img src="images/logo.png" class="logo">
           </a>
         </div>
